# libsaudacaocpp

./: CMakeLists.txt  Readme.md
.github/workflows/: cmake.yaml
cmake/: CPM.cmake
exemplo/: CMakeLists.txt  demo.cc
include/saudacao/: saudacao.hh
src/: CMakeLists.txt  saudacao.cc
